[package]
name = "geyser-grpc-connector"
version = "0.13.1+yellowstone.10.0.0-solana.3.0"
edition = "2021"

description = "Multiplexing and Reconnection on Yellowstone gRPC Geyser client streaming"
license = "Apache-2.0"
authors = ["GroovieGermanikus <groovie@mango.markets>"]
repository = "https://github.com/blockworks-foundation/geyser-grpc-connector"

[dependencies]
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v10.0.0+solana.3.0.0" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v10.0.0+solana.3.0.0" }

# required
solana-commitment-config = "3"
solana-signature = "3"
solana-clock = "3"

url = "2.5.0"
async-stream = "0.3.5"
tokio = { version = "1.28", features = ["rt-multi-thread"] }
tokio-metrics = { version = "0.4.0", default-features = false }
futures = "0.3.28"
merge-streams = "0.1.2"
anyhow = "1.0.70"
log = "0.4.17"
tracing = "0.1.37"
itertools = "0.10.5"

tokio-stream = "~0.1.17"
tonic = "~0.14.0"
tonic-build = "~0.14.0"
tonic-prost = "~0.14.0"
tonic-prost-build = "~0.14.0"
tonic-health = "~0.14.0"

[dev-dependencies]
tracing-subscriber = "0.3.16"
solana-logger = "3"
solana-account-decoder = "~3.0.2"

base64 = "0.21.5"
bincode = "1.3.3"
csv = "1.3.0"
lz4_flex = "0.11.3"
dashmap = "6.1.0"
regex = "1.10.4"
clap = { version = "4.2", features = ["derive"] }

# patch curve25519-dalek is gone
